20050501 widget/{.cvsignore,Makefile.am,fuse.font.sbf,mkfusefont.pl}: add
	 proportional font (part of patch #1150693) (Darren).
20050501 widget/{widget.c,widget_internals.h}: core support for
	 proportional printing (next part of patch #1150693) (Darren).
20050501 widget/{menu.c,widget.c}: remove unused variables/functions.
20050501 menu_data.pl,widget/{browse.c,debugger.c,error.c,filesel.c,
	 menu.c,options.pl,query.c,roms.c,select.c,text.c,widget.c,
	 widget_internals.h}: implement proportional printing (rest of
	 patch #1150693) (Darren).
20050501 keysyms.pl,ui/sdl/{sdlkeyboard.[ch],sdlui.c}: SDL support for
	 'native' keysyms change (patch #1152497) (Fred).
20050501 utils.[ch],widget/widget.c: find the Fuse font file when running
	 in the build tree.
20050606 input.c: also drive the joystick from the Spectrum keysym on release
         (Fred).
20050606 ui/sdl/sdlui.c: Set miminised Fuse name to exclude speed (Fred).
20050906 periph.[ch],machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,
         spec48.c,spec_se.c,specplus2.c,specplus2a.c,specplus3.c,specplus3e.c,
         tc2048.c,tc2068.c,ts2068.c}: split periph_setup into separate
         functions for each device (patch #1144590) (Stuart Brady).
20050910 menu_data.c,widget/{Makefile.am,memory.c,menu.c,widget.[ch],
         widget_internals.h} : add widget memory browser (patch #1150704)
         (Darren).
20050913 widget/{error.c,menu.c,roms.c,select.c,text.c,widget.c,
         widget_internals.h} : prettify widget interface (patch #1150706)
         (Darren).
20051010 screenshot.c: fix writing and reading of Timex screenmode/colour in
         hires .scr screenshots (thanks, Gergely Szasz) (Fred).
20051020 tape.c,ui/ui.h,ui/gtk/browse.c,widget/widget.c: add support for
         partial updating of the tape browser (Fred).
20051012 screenshot.c: fix warning in hires byte assignment (Fred).
20051027 snapshot.c: make default snapshot format .szx (Fred).